# TFG-voting-system

./: .env.example  .gitignore  .tarignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  drizzle.config.ts  metrics.json  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  sst.config.ts  tsconfig.json
public/contracts/: election.sol
scripts/: 00-init.sql  01-populate.sql  aggregate_orchestrator.py  benchmark.config.json  benchmark.py  benchmark_orchestrator.py  benchmark_runner.py  blockchain-interactions.ts  blockchain_benchmark.py  blockhain_benchmark.py  deploy_contract.py  emit-votes.ts  generate-credentials.ts  initialize_db.sql  invoke-tally.ts  orchestrator.config.json  package.json  presign-votes.ts  standalone_benchmark.py  user-flow.ts  visualize_benchmarks.ipynb
scripts/lib/: index.d.ts  index.js  package.json
scripts/sql/: 01-populate.sql
scripts/visualizations/: compare_benchmarks.ipynb  visualization.ipynb  visualize_benchmarks.ipynb  visualize_config_impact.py
src/: auth.config.ts  auth.ts  env.ts  instrumentation-node.ts  instrumentation.ts  middleware.ts  tfg-types.d.ts
src/app/: layout.tsx  manifest.webmanifest
src/background/: deployContract.ts
src/components/: Button.tsx  Input.tsx  Label.tsx  Separator.tsx  Table.tsx  TextArea.tsx  (+4 more)
src/lib/server/blind_signatures/: Cargo.toml  blind_signatures.d.ts  package-lock.json  package.json
src/lib/server/blind_signatures/src/: blind_signature.rs  conversions.rs  lib.rs  server.rs
src/lib/wasm/: Cargo.toml
src/lib/wasm/src/: ballot.rs  lib.rs
types/: nextauth.d.ts
(+224 files in other folders)
