[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
elastic-elgamal = { version = "0.3.0", features = ["serde"] }
serde_json = "1.0.115"
merlin = "3.0.0"
blind-rsa-signatures = "0.15.0"
