[package]
name = "blind_signatures"
version = "0.1.0"
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
blind-rsa-signatures = "0.15.0"
wasm-bindgen = "0.2.92"
getrandom = { version = "0.2", features = ["js"] }
