[package]
name = "blind_signatures"
version = "0.1.0"
edition = "2021"
exclude = ["index.node"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.5"
serde_json = "1.0.115"
blind-rsa-signatures = "0.15.0"
neon = "1.0.0"